partman-base (110) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Resolve symlinks before looking up devices in /proc/swaps.
  
  [ Anton Zinoviev ]
  * Simplify the logic of the main partman script.  Rename auto.d to
    display.d.

 -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jul 2007 17:43:17 +0100

partman-base (109) unstable; urgency=low

  [ Otavio Salvador ]
  * Remove partmap on clean.
  * Fix a compilation warning on partmap.c.

  [ Colin Watson ]
  * Use MS-DOS label by default on PS3 systems.

  [ Frans Pop ]
  * Add support for Serial ATA RAID (closes: #389570):
    - recognize and display dmraid devices
    - skip physical disks that are part of a SATA RAID disk
    Thanks to Jérémy Bobbio whose patch was used in the changes.

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Japanese (ja.po) by Kenshi Muto
  * Dutch (nl.po) by Frans Pop
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Ukrainian (uk.po)
  * Vietnamese (vi.po) by Clytie Siddall
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 00:22:23 +0200

partman-base (108) unstable; urgency=low

  [ Martin Michlmayr ]
  * Remove references to RiscPC since this platform is no longer
    supported.

  [ Colin Watson ]
  * If an auto.d script exits >= 100, skip all remaining auto.d scripts
    since the semantics are supposed to be that we go straight to the
    confirmation prompt.
  * Use GPT label by default on Intel Macs.

  [ Frans Pop ]
  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.
  * Add new udeb partman-utils containing the utilities parted_devices and
    partmap. Thanks to Robert Millan for contributing partmap.

  [ Updated translations ]