@@ -11,7 +11,11 @@ abort () {
 
 db_capb backup
 
-# Measure the width of partman/text/number here to make things faster.
+###########################################################
+# Compute some constants in order to make things faster.
+###########################################################
+
+# The width of partman/text/number.
 # number_width is used only in visual.d/number
 db_metaget partman/text/number description
 RET=$(printf "$RET" '')
@@ -19,15 +23,29 @@ RET=$(stralign 50 "$RET" | sed 's/[^ ]//g')
 number_width=$((2 + 50 - ${#RET}))
 export number_width
 
+# Detect if Debconf can escape strings
+# non-empty means we can escape
+can_escape=''
+if type debconf-escape >/dev/null 2>&1; then
+	db_capb backup
+	for cap in $RET; do
+		case $cap in
+			escape)	can_escape=yes ;;
+		esac
+	done
+fi
+export can_escape
 
-# Here is maybe not a good place to set deci (TODO)
+# The decimal separator (dot or comma)
 #db_metaget partman/text/deci description
 #deci="$RET"
-#export deci
-
 # The comma has special meaning for debconf.  Lets force dot until we
-# discover where the comma has to be escaped..
+# start using escaped strings.
 deci='.'
+export deci
+
+###########################################################
+
 
 # Commented due to #240145
 #if [ -e /var/lib/partman ]; then
