@@ -6,6 +6,7 @@ partman-base (110) UNRELEASED; urgency=low
   [ Anton Zinoviev ]
   * Simplify the logic of the main partman script.  Rename auto.d to
     display.d.
+  * Compute whether debconf can escape only once.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jul 2007 17:43:17 +0100
 
